samples/_failures_safe/1761435017_612d55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b43b398.c: In function ‘main’:
./samples/SAFE/__tmp_2b43b398.c:168:13: error: expected declaration or statement at end of input
  168 |             }
      |             ^
./samples/SAFE/__tmp_2b43b398.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b43b398.c:168:13: error: expected declaration or statement at end of input
